# matrix_operation

./: .gitignore  CMakeLists.txt  note
include/matrix_operation/: Matrix.h  ac_auxiliary.h  ac_mem_allocate.h  auto_calib_internal.h  auto_calib_types.h  geometry.h  ia_abstraction.h  ia_log.h  macro.h  nr3.h  qrdcmp.h  solver.h  svd.h  svd3.h
src/: CMakeLists.txt
src/matrix_operation/: Matrix.cc  ac_auxiliary.c  ac_mem_allocate.c  geometry.c  geometry.cpp  ia_log.c  solver.c  svd3.cpp
src/test/: SE3_test.c  SVD_QR_test.cpp  SVD_test.cpp  matrix_test.c
